--- a/index.html
+++ b/index.html
@@ -16,19 +16,12 @@
   <body>
     
     <nav class="nav-bar">
-      <ul class="menu">
-        <li class="list"><a class="link" href="#">About</a></li>
-        <li class="list"><a class="link" href="#">Projects</a></li>
-        <li class="list"><a class="link" href="#">Resume</a></li>
-        <li class="list"><a class="link" href="#">Contact</a></li>
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Resume</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
-      <div class="social-container">
-        <ul class="social-menu">
-          <li class="social-list"><a class="social-link" href="#">GitHub</a></li>
-          <li class="social-list"><a class="social-link" href="#">LinkedIn</a></li>
-          <li class="social-list"><a class="social-link" href="#">Twitter</a></li>
-        </ul>
-      </div>
     </nav>
      
     <header class="header-container">
@@ -37,9 +30,19 @@
     </header>
 
     <section class="about">
-      <p class="about-text">Welcome to my portfolio, I am a front-end web developer with working knowledge of HTML, CSS, 
+      <p>Welcome to my portfolio, I am a front-end web developer with working knowledge of HTML, CSS, 
         JavaScript, SQL, Git and always learning more.
       </p>
+    </section>
+
+    <div class="section-title-projects">
+      <h3>Projects</h3>
+    </div>
+
+    <section class="projects">
+      <div class="projects-box"></div>
+      <div class="projects-box"></div>
+      <div class="projects-box"></div>
     </section>
 
 
