--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
       <a href="https://github.com/web-dev-lex"><img class="github-link" src="GitHub-Mark-Light-32px.png" alt="Github link"></a>
       <a href="https://www.linkedin.com/in/alexi-antonatos-57972823b/"><img class="linkedIn-link" src="LI-In-Bug.png" alt="LinkedIn link" width="32px"></a>
+      <a href="https://twitter.com/webdevlex35"><img class="twitter-link" src="Twitter social icons - circle - white.png" alt="Twitter link" width="32px"></a>
 
       <header class="header-container">
         <h1 class="main-header">Alexi Antonatos</h1>
@@ -41,17 +42,24 @@
     </div>
 
     <div class="container-2">
+
       <div class="section-title-projects">
-        <h3>Projects</h3>
+        <h3>PROJECTS</h3>
       </div>
 
       <section class="projects">
-        <div class="projects-box"></div>
-        <div class="projects-box"></div>
-        <div class="projects-box"></div>
+
+        <div class="cryptospot-container" id="cryptospot-container">
+          <h3>CRYPTOSPOT</h3>
+          <a href="#"><img src="cryptospot-new.png" alt=""></a>
+        </div>
+
+        
+
       </section>
     </div>
-      <footer class="footer-container"></footer>
+
+    <footer class="footer-container"></footer>
     
 
   </body>
