--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav class="nav-bar">
         <ul>
           <li><a href="#">About</a></li>
-          <li><a href="#">Projects</a></li>
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
@@ -47,11 +47,16 @@
         <h3>PROJECTS</h3>
       </div>
 
-      <section class="projects">
+      <section class="projects" id="projects">
 
-        <div class="cryptospot-container" id="cryptospot-container">
+        <div class="cryptospot-container container" id="cryptospot-container">
           <h3>CRYPTOSPOT</h3>
-          <a href="#"><img src="cryptospot-new.png" alt=""></a>
+          <a href="#"><img src="cryptospot-new.png" alt="cryptospot"></a>
+        </div>
+
+        <div class="demo-man-container container" id="demo-man">
+          <h3>DEMO MAN</h3>
+          <!--<a href="#"><img src="" alt="demo man"></a>-->
         </div>
 
         
